menu bar spacing fixed for different screen sizes.  repeat media query removed from modules.

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -9,7 +9,7 @@
 }
 
 .main-nav ul li {
-  display: none;
+  display: block;
   padding: 1% 5%;
   text-align: center;
   font-size: .95em;
@@ -106,25 +106,6 @@
   }
 }
 
-@media only screen and (min-width: 640px) {
-  /* Minor styling: larger image and fonts to match new screen size */
-  h1 {
-    font-size: 2.1em;
-  }
-
-  h2 {
-    font-size: 1.7em;
-  }
-
-  .hero {
-    background-image: url('../img/map-1024.png');
-  }
-
-  .main-nav ul li {
-    padding: 1% 8%;
-  }
-}
-
 @media only screen and (min-width: 1024px) {
   /* Minor styling: larger image and fonts to match new screen size */
   h1 {
@@ -132,7 +113,7 @@
   }
 
   .main-nav ul li {
-    padding: 1% 10%;
+    padding: 1% 5%;
   }
 
   .hero {
@@ -151,7 +132,7 @@
   }
 
   .main-nav ul li {
-    padding: 1% 12%;
+    padding: 1% 8%;
   }
 
   .hero {
